<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/constraint_layout_email"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:paddingEnd="32dp"
    android:paddingStart="32dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_email"
            android:hint="@string/email"
            android:paddingTop="20dp"
            android:background="@null"
            android:fontFamily="sans-serif"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <View
        android:id="@+id/view_divider_email"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:paddingTop="10dp"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/text_input_layout_email"
        app:layout_constraintEnd_toEndOf="@id/text_input_layout_email"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_email_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="@id/view_divider_email"
        app:layout_constraintStart_toStartOf="@id/view_divider_email"
        app:layout_constraintTop_toBottomOf="@id/view_divider_email" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_email_error">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_password"
            android:hint="@string/password"
            android:paddingTop="20dp"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:fontFamily="sans-serif"
            android:inputType="textPassword"
            android:text=""
            android:maxLength="50"
            android:imeOptions="actionDone"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.design.widget.TextInputLayout>

    <View
        android:id="@+id/view_divider_password"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:paddingTop="10dp"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/text_input_layout_password"
        app:layout_constraintEnd_toEndOf="@id/text_input_layout_password"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_password_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="@id/view_divider_password"
        app:layout_constraintStart_toStartOf="@id/view_divider_password"
        app:layout_constraintTop_toBottomOf="@id/view_divider_password" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_password_error" />

</android.support.constraint.ConstraintLayout>